frontend/src/app/header/header.component.css
header {
  height: 100vh;
  background-size: cover;
  background-position: center;
  color: white;
  transition: background-image 1s ease-in-out;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

header h1 {
  font-family: 'Poppins', sans-serif;
  font-size: 4rem;
  margin: 0;
  color: #ffffff;
  animation: fadeInUp 1s ease-out;
}

header p {
  font-size: 1.5rem;
  color: #f8f9fa;
  animation: fadeInUp 1s ease-out 0.5s;
}

.overlay {
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), #141414);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.container-fluid {
  position: relative;
  z-index: 2;
}


.arrow-container i {
  animation: fadeInUp 1s ease-out;
  font-size: 3rem; 
  color: #fff;     
  animation: blink 2s infinite;
  margin-top: 3rem !important;
}

@keyframes blink {
  0% {
    opacity: 1;
    transform: translateY(0);
  }
  50% {
    opacity: 0;
    transform: translateY(-10px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}


@keyframes fadeInUp {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}


@media (max-width: 1200px) {
  header h1 {
    font-size: 3.5rem;
  }

  header p {
    font-size: 1.3rem;
  }
}

@media (max-width: 992px) {
  header h1 {
    font-size: 3rem;
  }

  header p {
    font-size: 1.2rem;
  }
}

@media (max-width: 768px) {
  header {
    height: 80vh;
  }
  
  header h1 {
    font-size: 2.5rem;
    margin-top: 3rem !important;
  }

  header p {
    font-size: 1.1rem;
  }

  .movie-name {
    font-size: 1rem !important;
  }
  .arrow-container i {
    font-size: 1.8rem; 
    color: #fff;     
    margin-top: 1.5rem !important;
  }
 
  .blink {
    font-size: 2.5rem;
  }
}

@media (max-width: 576px) {
  header {
    height: 70vh;
  }

  header h1 {
    font-size: 2rem;
  }

  header p {
    font-size: 1rem;
  }

  .movie-name {
    font-size: 0.9rem;
  }

 
  .blink {
    font-size: 2rem;
    
  }
}

